<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.authentication.login.LoginActivity"
>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/auth_header" android:background="@drawable/authentication_header_background"
            app:layout_constraintBottom_toTopOf="@+id/email_textview" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/swinging" android:id="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        />
        <TextView
                android:text="@string/login_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="64dp" android:layout_marginStart="32dp" android:textSize="34sp"
                android:textColor="@color/white" android:textStyle="bold"/>
        <ImageView
                android:layout_width="6dp"
                android:layout_height="12dp" app:srcCompat="@drawable/ic_back_arrow"
                android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:text="@string/login_button_text"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/tLogin"
            android:layout_marginBottom="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/email_textview"
            android:textColor="@color/dark_grey" android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            android:layout_marginBottom="4dp" app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            android:layout_marginStart="8dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:id="@+id/editTextTextEmailAddress"
            android:backgroundTint="@color/edittext_background"
            android:background="@color/edittext_background"
            app:layout_constraintBottom_toTopOf="@+id/password_textview"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/password_textview"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword">
        <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/etEmail"
                android:ems="10"

                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint" tools:ignore="TouchTargetSizeCheck"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/password_textview"
            android:textColor="@color/dark_grey" android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            android:layout_marginBottom="4dp" app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="54dp"
            app:passwordToggleEnabled="true"
            android:id="@+id/editTextTextPassword"


            android:background="@drawable/editext_background"
            app:layout_constraintBottom_toTopOf="@+id/tForgotPassword"
            android:layout_marginBottom="4dp" app:layout_constraintEnd_toEndOf="@+id/tForgotPassword"
            app:layout_constraintStart_toStartOf="@+id/login_button">

        <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/etPassword"
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword" tools:ignore="TouchTargetSizeCheck"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tForgotPassword"
            android:textSize="16sp"
            android:textColor="@color/ecoville_primary"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            android:layout_marginBottom="4dp" app:layout_constraintEnd_toEndOf="@+id/login_button"/>
    <TextView

            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tLogin"
            android:textSize="16sp"
            android:textColor="@color/ecoville_primary" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>