<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   app:cardElevation="8dp"
                                                   app:cardCornerRadius="10dp"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   >
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/waste_item_image"
                android:layout_width="400dp"
                android:layout_height="135dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/ic_plastic_cups"/>
        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/waste_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/waste_item_image"
                tools:text="@string/waste_item_name" android:layout_marginTop="16dp" android:layout_marginStart="8dp"
                android:textColor="@color/dark_grey" android:textStyle="bold"/>
        <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/waste_item_location"
                app:layout_constraintTop_toBottomOf="@id/waste_item_name"
                app:layout_constraintStart_toStartOf="@id/waste_item_name"
                android:layout_marginTop="8dp"
                tools:text="@string/waste_item_location"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/waste_item_location_color"/>

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/waste_item_distance"
                app:layout_constraintTop_toBottomOf="@id/waste_item_location"
                app:layout_constraintStart_toStartOf="@id/waste_item_location"
                android:layout_marginTop="8dp"
                tools:text="@string/waste_item_distance"
                android:textSize="11sp"
                android:textStyle="normal"
                android:textColor="@color/waste_item_distance_color"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>
        <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/waste_item_add_button"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/waste_item_location_color"
                android:foregroundTint="@color/waste_item_location_color"
                android:tint="@color/waste_item_location_color"
                app:srcCompat="@drawable/ic_add"/>
        <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/waste_item_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_pin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>